--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,25 @@
-# Python
+# Bytecode und temporäre Dateien
 __pycache__/
 *.pyc
 *.pyo
-.Python
-venv/
-env/
 
-# Data files (zu groß für Git)
-data/raw/*.csv
-results/*.csv
-logs/*.log
+# Log- und Ergebnisdateien
+logs/
+results/
 
-# OS
+# Datenverzeichnisse und sensible Daten
+# Excel-Dateien (Daten) sollen nicht ins Repo
+*.xlsx
+*.xls
+*.xlsm
+*.xlsb
+
+# Datenordner komplett ignorieren (außer ggf. Beispiel-README)
+data/
+!data/README.md
+
+# Jupyter Notebooks (falls vorhanden)
+*.ipynb
+
+# Sonstiges
 .DS_Store
-Thumbs.db
-
-# IDE  
-.vscode/
-.cursor/
