--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,33 @@
-ollama==0.1.7
+# Scientific Few-Shot Learning Experiment Requirements
+# For DHBW Academic Project
+
+# Core Data Science
 pandas==2.0.3
-scikit-learn==1.3.0
+numpy>=1.24.0
 scipy==1.11.1
-pyyaml==6.0
-requests==2.31.0
+scikit-learn==1.3.0
+
+# Statistical Analysis
+statsmodels>=0.14.0
+
+# Visualization
 matplotlib==3.7.2
 seaborn==0.12.2
+
+# Progress Tracking
+tqdm>=4.65.0
+
+# Configuration and Data
+pyyaml==6.0
+openpyxl>=3.1.0
+
+# HTTP Requests for LLM
+requests==2.31.0
+ollama==0.1.7
+
+# Logging and Utils
+python-dateutil>=2.8.2
+
+# Optional: Jupyter for interactive analysis
+# jupyter>=1.0.0
+# ipykernel>=6.25.0
